[package]
name = "mmap-vec"
version = "0.1.2"
edition = "2021"
authors = ["Arthur LE MOIGNE"]
description = "Memory mapped vectors"
license = "MIT"
repository = "https://github.com/arthurlm/mmap-vec"
documentation = "https://docs.rs/mmap-vec"
keywords = ["mmap", "data-strucure"]
categories = ["os::unix-apis", "data-structures", "memory-management"]
exclude = ["tests/", ".github/"]

[dependencies]
libc = "0.2.147"
uuid = { version = "1.4.1", features = ["v4"] }
dirs = { version = "5.0.1", optional = true }

[dev-dependencies]
glob = "0.3.1"
rand = "0.8.5"

[features]
default = ["cache-dir"]
cache-dir = ["dirs"]
