[package]
name = "mmap-vec"
version = "0.1.4"
edition = "2021"
authors = ["Arthur LE MOIGNE"]
description = "Memory mapped vectors"
license = "MIT"
repository = "https://github.com/arthurlm/mmap-vec"
documentation = "https://docs.rs/mmap-vec"
keywords = ["mmap", "data-strucure"]
categories = ["os::unix-apis", "data-structures", "memory-management"]
exclude = ["tests/", ".github/"]

[dependencies]
libc = "0.2.147"
uuid = { version = "1.4.1", features = ["v4"] }
dirs = { version = "5.0.1", optional = true }
serde = { version = "1.0.189", optional = true }

[dev-dependencies]
glob = "0.3.1"
serde_json = "1.0.107"

[features]
default = ["cache-dir", "serde"]
cache-dir = ["dep:dirs"]
serde = ["dep:serde"]
